tests/profile/error/camera/navstate_missing_up_y.profile
{
  "version": { "major": 1, "minor": 0 },
  "camera": {
    "type": "setNavigationState",
    "anchor": "none",
    "aim": "aim",
    "frame": "root",
    "position": { "x": 1.0, "y": 2.0, "z": 3.0 },
    "up": { "x": 1.0, "z": 6.0 },
    "yaw": 10.0,
    "pitch": -10.0
  }
}
